finished game logic

--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
                     <p class="score player"><strong>Player: </strong>0</p>
                 </div>
                 <div class="game-player">
-                    <div class="weapon">❔</div>
-                    <p class="score computer" id="computerWeapon"><strong>Computer: </strong>0</p>
+                    <div class="weapon" id="computerWeapon">❔</div>
+                    <p class="score computer"><strong>Computer: </strong>0</p>
                 </div>
                 
             </div>
