--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Rock Paper Scissors</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
@@ -39,7 +39,7 @@
         </div>
     </section>
     <footer class="footer">
-        Copyright &copy; <span id="year"></span> martinsayshi logo github
+        <p>Copyright &copy; <span id="year"></span> martinsayshi</p> <a href="https://github.com/martinsayshi" target="_blank"><img src="img/github-mark-white.svg" alt="github link" class="footer-img"/></a>
     </footer>
 </body>
 </html>
