--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
     <link
       href="https://fonts.googleapis.com/css2?family=Press+Start+2P&family=Roboto:wght@400;700&display=swap" rel="stylesheet"/>
     <link href="https://fonts.googleapis.com/css2?family=Righteous&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="css/style.css"/>
-    <script src="/js/script.js" defer></script>
+    <link rel="stylesheet" href="./css/style.css"/>
+    <script src="script.js" defer></script>
 </head>
 <body>
     <header>
